--- a/about_us.html
+++ b/about_us.html
@@ -13,6 +13,9 @@
   <!--Bootstrap icons-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
+    <!-- Favicon Link -->
+    <link rel="shortcut icon" type="image/jpg" href="imgs/a.jpg"/>
+
 </head>
 <body>
   <!--Navbar -->
@@ -157,14 +160,11 @@
     </div>
     
     <!--Angela Contact-->
-    <p class="names" > Angela Bai</p>
+    <p class="names" >Angela Bai</p>
     <div class="social_icon">
-      <a href="https://www.instagram.com/nnhsprogramming/?hl=en">
+      <a href="https://www.instagram.com/_angelabai/">
         <i class="bi bi-instagram fa-2x p-1"></i>
       </a> 
-      <a href="https://www.facebook.com/groups/293459344434857/">
-        <i class="bi bi-facebook p-1"></i>
-      </a>
       <a href="mailto:angela.l.bai@gmail.com">
         <i class="bi bi-envelope p-1"></i>
       </a>
@@ -243,11 +243,17 @@
     <button id="btn16" type="button" class="btn btn-outline-secondary" onclick="showMember(16)">Name</button>
     <button id="btn17" type="button" class="btn btn-outline-secondary" onclick="showMember(17)">Name</button>
     <button id="btn18" type="button" class="btn btn-outline-secondary" onclick="showMember(18)">Name</button>
+    <button id="btn19" type="button" class="btn btn-outline-secondary" onclick="showMember(19)">Name</button>
+    <button id="btn19" type="button" class="btn btn-outline-secondary" onclick="showMember(20)">Isabelle Sloan</button>
+    <button id="btn19" type="button" class="btn btn-outline-secondary" onclick="showMember(21)">Noah Finkelstein</button>
 
   </div>  
 
   </div>
   <!--JavaScript Tag-->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="about.js"></script>
   
 </body>
