--- a/archive.html
+++ b/archive.html
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="archive.css">
 
+    <!-- Favicon Link -->
+    <link rel="shortcut icon" type="image/jpg" href="imgs/a.jpg"/>
+
 </head>
 <body>
     <div>
@@ -52,7 +55,7 @@
           </ul>
         </div>
       </nav>
-      <h1 class="h1 text-center">Archive</h1>
+      <h1 class="h1 text-center p-3">Archive</h1>
     </div>
   <center>
     <img src="imgs/server.jpg" class="center" width="400" height="200" >
@@ -62,13 +65,26 @@
   <div class="oldProjects p-4">
     <p style="font-family:arial;color:grey">+ Old Newton North Programming Website </p>
 
-    <p style="font-family:arial;color:grey">+ Orbit App</p>
-    <p style="font-family:arial;color:grey">+ Newton North Parking Availability App </p>
+    <p style="font-family:arial;color:grey">
+      + 
+      <a href="https://apps.apple.com/us/app/orbit-a-space-game/id1353390547">Orbit App</a>
+
+    </p>
+    <!-- https://apps.apple.com/us/app/orbit-a-space-game/id1353390547 -->
+
+    <p style="font-family:arial;color:grey">+  
+      <a href="https://apps.apple.com/us/app/north-parking/id1439643706">North Parking Availability App</a>
+    </p>
+
+
 
     <p style="font-family:arial;color:grey">+ Website for TigerInsider</p>
 
     <p style="font-family:arial;color:grey">+ Dreamher Charity Website</p>
     </div>
-  
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
