--- a/faq.html
+++ b/faq.html
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="faq.css">
 
+    <!-- Favicon Link -->
+    <link rel="shortcut icon" type="image/jpg" href="imgs/a.jpg"/>
+
 </head>
 <body>
     <div>
@@ -52,7 +55,7 @@
           </ul>
         </div>
       </nav>
-      <h1 class="h1 text-center">FAQ</h1>
+      <h1 class="h1 text-center p-3">FAQ</h1>
     </div>
     <div class="question1 p-4">
       
@@ -69,7 +72,7 @@
       <p>No! Everybody is welcome to join! There is no experience needed!</p>
 
       <h5>What happens if I already know how to code?</h5>
-      <p>That’s great! You’re obviously still welcome to join the club. We will work on challenging projects. You can also help to teach other people cool coding skills. Joining the club is also a great way to share ideas and learn different ways to approach the same problem!</p>
+      <p>That’s great! We would love to have you in the club, we will work on lots of different projects and you can help us to work on the harder parts. This can also be a space to work on your personal projects and talk them through with others.</p>
 
       <h5>Have questions?</h5>
       <p>Fill out this
@@ -78,5 +81,9 @@
         
 
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
