--- a/fundraising.html
+++ b/fundraising.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FAQ</title>
+  <title>Fundraising</title>
 
   <!-- boostrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="fundraising.css" rel="stylesheet" type="text/css" />
+
+    <!-- Favicon Link -->
+    <link rel="shortcut icon" type="image/jpg" href="imgs/a.jpg"/>
 
 </head>
 <body>
@@ -52,17 +55,26 @@
           </ul>
         </div>
       </nav>
-      <h1 class="h1 text-center">Fundraising</h1>
+      <h1 class="h1 text-center p-3">Fundraising</h1>
     </div>
   <div class="WhyFundraising p-4">
     <h5>Why fundraising?</h5>
     <span>The club needs money to buy a domain for this website, donate to charities, get new equipment for projects, perchase domains for other websites, snacks,and club merch. Any donation is greatly appreciated!</span>
   </div>
 
+  <br></br>
+  <div class="text-center">
+    <h4><u>Sale after school on Friday November 12, meet at tiger drive. See ya there!</u></h4>
+  </div>
   <img src="imgs/bakeSaleFlyer.jpg" alt="">
+ 
+  
 
   <!-- Upcoming fundraise plan -->
   <!-- link to donate money -->
   
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
