--- a/resources.html
+++ b/resources.html
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="resources.css" rel="stylesheet" type="text/css" />
 
+    <!-- Favicon Link -->
+    <link rel="shortcut icon" type="image/jpg" href="imgs/a.jpg"/>
+
 </head>
 <body>
     <div>
@@ -52,7 +55,7 @@
           </ul>
         </div>
       </nav>
-      <h1 class="h1 text-center">Resources</h1>
+      <h1 class="h1 text-center p-3">Resources</h1>
     </div>
   <script src="script.js"></script>
   <div class="buttons">
@@ -97,9 +100,13 @@
         <li><p>Java</p></li>
         <li><p>C++</p></li>
         <li><p>C#</p></li>
-        <li><p>Unity</p></li>
+        <!--  li><p>Unity</p></li> -->
         <li><p>Manim</p></li>
      </ul>
   </div>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
