fixed headshots and centered navbar

--- a/about_us.html
+++ b/about_us.html
@@ -82,7 +82,7 @@
   </div>
 
   <!--Betina--> 
-  <div class="container col-xs-12 col-md-6 col-lg-3">
+  <div class="container col-xs-12 col-md-6 col-lg-6 col-xl-3">
     <!--overlay hover-->
     
     <div class="container container1" onclick="showOfficer(0)">
@@ -112,9 +112,9 @@
         </a>
     </div>
   </div>
-  
+  <!-- col-xs-12 col-md-6 col-lg-3 -->
   <!--Jennifer-->
-  <div class="container col-xs-12 col-md-6 col-lg-3">
+  <div class="container col-xs-12 col-md-6 col-lg-6 col-xl-3">
     <!--overlay hover-->
     <div class="container container1"  onclick="showOfficer(1)">
       <img 
@@ -143,14 +143,14 @@
   </div>
 
   <!--Angela-->
-  <div class="container col-xs-12 col-md-6 col-lg-3">
+  <div class="container col-xs-12 col-md-6 col-lg-6 col-xl-3">
     
     <div id="a_btn " onclick="showOfficer(2)">
       <div class="container container1">
         <img 
           id="off2"
           class = "headshots rounded-circle img-fluid image" 
-          src="headshots/angelaTwo.jpeg" 
+          src="headshots/angelaTwo.jpg" 
           alt="Angela Bai">
         <!--Overlay Hover-->
         <div class="overlay">
@@ -176,7 +176,7 @@
   </div>
 
   <!--Mr. P-->
-  <div class=" container col-xs-12 col-md-6 col-lg-3">
+  <div class=" container col-xs-12 col-md-6 col-lg-6 col-xl-3">
     <!--overlay hover-->
     <div class="container container1" onclick="showOfficer(3)">
       <img 
@@ -205,11 +205,6 @@
   <!-- Modal Member Template -->
   <div id="ShowMember" class="modal">
     <div class="modal-content m_modal">  
-      <!-- <img 
-          id="ShowOfficer_ID"
-          class = "headshot modal_headshot img-fluid image" 
-          src="#" 
-          alt=""> -->
       <div class="m_close">
         <span id="CloseMember" class="close">&times;</span>
       </div>
@@ -224,15 +219,15 @@
 
   <!--Member Buttons-->
   <div class="buttonsForPeople text-center pt-4 pb-5">
-    <button id="btn0" type="button" class="btn btn-outline-secondary" onclick="showMember(0)">Ria Chudasama</button>
-    <button id="btn1" type="button" class="btn btn-outline-secondary" onclick="showMember(1)">Linda Xue</button>
-    <button id="btn2" type="button" class="btn btn-outline-secondary" onclick="showMember(2)">Ewan McPhail</button>
-    <button id="btn3" type="button" class="btn btn-outline-secondary" onclick="showMember(3)">Maxim Malkevich</button>
-    <button id="btn4" type="button" class="btn btn-outline-secondary" onclick="showMember(4)">Lily Tjia</button>
-    <button id="btn5" type="button" class="btn btn-outline-secondary" onclick="showMember(5)">Dan Wong</button>
-    <button id="btn6" type="button" class="btn btn-outline-secondary" onclick="showMember(6)">Jess Rigoli</button>
-    <button id="btn7" type="button" class="btn btn-outline-secondary" onclick="showMember(7)">Adam Kleber</button>
-    <button id="btn8" type="button" class="btn btn-outline-secondary" onclick="showMember(8)">Name</button>
+    <button id="btn0" type="button" class="btn btn-outline-secondary" onclick="showMember(0)">Izzy Craine</button>
+    <button id="btn1" type="button" class="btn btn-outline-secondary" onclick="showMember(1)">Ria Chudasama</button>
+    <button id="btn2" type="button" class="btn btn-outline-secondary" onclick="showMember(2)">Linda Xue</button>
+    <button id="btn3" type="button" class="btn btn-outline-secondary" onclick="showMember(3)">Ewan McPhail</button>
+    <button id="btn4" type="button" class="btn btn-outline-secondary" onclick="showMember(4)">Maxim Malkevich</button>
+    <button id="btn5" type="button" class="btn btn-outline-secondary" onclick="showMember(5)">Lily Tjia</button>
+    <button id="btn6" type="button" class="btn btn-outline-secondary" onclick="showMember(6)">Dan Wong</button>
+    <button id="btn7" type="button" class="btn btn-outline-secondary" onclick="showMember(7)">Jess Rigoli</button>
+    <button id="btn8" type="button" class="btn btn-outline-secondary" onclick="showMember(8)">Adam Kleber</button>
     <button id="btn9" type="button" class="btn btn-outline-secondary" onclick="showMember(9)">Name</button>
     <button id="btn10" type="button" class="btn btn-outline-secondary" onclick="showMember(10)">Name</button>
     <button id="btn11" type="button" class="btn btn-outline-secondary" onclick="showMember(11)">Name</button>
@@ -244,8 +239,9 @@
     <button id="btn17" type="button" class="btn btn-outline-secondary" onclick="showMember(17)">Name</button>
     <button id="btn18" type="button" class="btn btn-outline-secondary" onclick="showMember(18)">Name</button>
     <button id="btn19" type="button" class="btn btn-outline-secondary" onclick="showMember(19)">Name</button>
-    <button id="btn19" type="button" class="btn btn-outline-secondary" onclick="showMember(20)">Isabelle Sloan</button>
-    <button id="btn19" type="button" class="btn btn-outline-secondary" onclick="showMember(21)">Noah Finkelstein</button>
+    <button id="btn20" type="button" class="btn btn-outline-secondary" onclick="showMember(20)">Name</button>
+    <button id="btn21" type="button" class="btn btn-outline-secondary" onclick="showMember(21)">Isabelle Sloan</button>
+    <button id="btn22" type="button" class="btn btn-outline-secondary" onclick="showMember(22)">Noah Finkelstein</button>
 
   </div>  
 
