--- a/archive.html
+++ b/archive.html
@@ -58,22 +58,33 @@
       <h1 class="h1 text-center p-3">Archive</h1>
     </div>
   <center>
-    <img src="imgs/server.jpg" class="center" width="400" height="200" >
+    <img src="imgs/orbit.jpg" class="center" height="200px">
+    <img src="imgs/podtalk.png" class="center" height="200px">
+    <br></br>
     <figcaption> Welcome to the archives. Here you will find the Programming Clubs past projects.</figcaption>
   </center>
 
   <div class="oldProjects p-4">
-    <p style="font-family:arial;color:grey">+ Old Newton North Programming Website </p>
+    <p style="font-family:arial;color:grey">+ 
+      <a href="https://nnhsprogramming.github.io/">Old Club Website</a>
+    </p>
+
 
     <p style="font-family:arial;color:grey">
       + 
       <a href="https://apps.apple.com/us/app/orbit-a-space-game/id1353390547">Orbit App</a>
 
     </p>
+
+  
     <!-- https://apps.apple.com/us/app/orbit-a-space-game/id1353390547 -->
 
     <p style="font-family:arial;color:grey">+  
       <a href="https://apps.apple.com/us/app/north-parking/id1439643706">North Parking Availability App</a>
+    </p>
+
+    <p style="font-family:arial;color:grey">
+      + Podtalk App
     </p>
 
 
