--- a/fundraising.html
+++ b/fundraising.html
@@ -58,15 +58,16 @@
       <h1 class="h1 text-center p-3">Fundraising</h1>
     </div>
   <div class="WhyFundraising p-4">
-    <h5>Why fundraising?</h5>
-    <span>The club needs money to buy a domain for this website, donate to charities, get new equipment for projects, perchase domains for other websites, snacks,and club merch. Any donation is greatly appreciated!</span>
+    <h5 class="text-center">Why fundraising?</h5>
+    <p class="text-center">The club needs money to buy a domain for this website, donate to charities, get new equipment for projects, perchase domains for other websites, snacks,and club merch. Any donation is greatly appreciated!</p>
   </div>
 
   <br></br>
   <div class="text-center">
     <h4><u>Sale after school on Friday November 12, meet at tiger drive. See ya there!</u></h4>
   </div>
-  <img src="imgs/bakeSaleFlyer.jpg" alt="">
+  <img class="fundraiser_img" src="imgs/flyer2.jpeg" alt="">
+  <img class="fundraiser_img"src="imgs/bakeSaleFlyer.jpg" alt="">
  
   
 
