--- a/index.html
+++ b/index.html
@@ -72,22 +72,20 @@
    <p> Welcome to the Newton North Programming Club website! The club is a great way to learn how to code, learn new coding stradegies, and make friends! We do lots of cool projects but most importantly, the club serves as a safe community for people to share ideas and collaborate with each other. At the Newton North Programming club we strive for excellence. Every Monday we push our knowledge further and further. We are pushing the limits of the human species and going farther than we ever have before. We hope to see you there! 
    </p> 
  </div>
-
+ 
   <div class="container-fluid p-3">
-    <!-- veer, poster, tiger, toby, stepUpDay, tigerLogo, zoom, newspaper, computerLogo -->
-    <!-- col-xs-12 col-md-6 col-lg-3 -->
     <div class="row">
-      <div class="column col-lg-3">
+      <div class="column container">
         <img src="imgs/stepUpDay.jpg" alt="">
         <img src="imgs/toby.jpg" alt="">
         <img src="imgs/veer.jpg" alt="">
       </div>
-      <div class="column col-lg-3">
+      <div class="column container">
         <img class = "border"src="imgs/computerLogo.jpg" alt="">
         <img src="imgs/tigerLogo.jpg" alt="">
         <img src="imgs/newspaper.jpg" alt="">
       </div>
-      <div class="column col-lg-3">
+      <div class="column container">
         <img src="imgs/zoom.jpg" alt="">
         <img src="imgs/poster.jpg" alt="">
         <img class = "border" src="imgs/tiger.png" alt="">
@@ -101,3 +99,74 @@
       <script src="script.js"></script>
   </body>
 </html>
+
+
+
+<!-- section class="about" id="about">
+		
+		<div class="cards container-fluid">
+			<div class="row">
+
+				<div class="col-lg-3 col-md-6">
+					<div class="flip-card card" ontouchstart="this.classList.toggle('hover');">
+  					<div class="flip-card-inner">
+    					<div class="flip-card-inner-front flip-card-front-join">
+      						<span id="specificjoin">Join</span>
+    					</div>
+    					<div class="flip-card-inner-back">
+      						<span class="join-info">
+							We welcome everyone to join and collaborate with us. <br> No experience necessary.
+							</span>
+    					</div>
+  					</div>
+					</div>
+				</div>
+
+				<div class="col-lg-3 col-md-6">
+					<div class="flip-card card" ontouchstart="this.classList.toggle('hover');">
+  					<div class="flip-card-inner">
+    					<div class="flip-card-inner-front flip-card-front-location">
+      						<span id="specificlocation">Location</span>
+    					</div>
+    					<div class="flip-card-inner-back">
+      						<span class="flip-card-back-dispay-block">Room 217</span>
+							<span class="flip-card-back-dispay-block">Thursday X-blocks</span>
+    					</div>
+  					</div>
+					</div>
+				</div>
+
+				<div class="col-lg-3 col-md-6">
+					<div class="flip-card card" ontouchstart="this.classList.toggle('hover');">
+  					<div class="flip-card-inner">
+    					<div class="flip-card-inner-front flip-card-front-project">
+      						<span id="specificproject">Project Types</span>
+    					</div>
+    					<div class="flip-card-inner-back">
+      						<span class="flip-card-back-dispay-block">iPhone apps</span>
+							<span class="flip-card-back-dispay-block">Web Development</span>
+							<span class="flip-card-back-dispay-block">Game Design</span>
+							<span class="flip-card-back-dispay-block">3D modeling</span>
+							<span class="flip-card-back-dispay-block">Bring your own ideas to the club!</span>
+    					</div>
+  					</div>
+					</div>
+				</div>
+
+				<div class="col-lg-3 col-md-6">
+					<div class="flip-card card" ontouchstart="this.classList.toggle('hover');">
+  					<div class="flip-card-inner">
+    					<div class="flip-card-inner-front flip-card-front-support">
+      						<span id="specificsupport">Create</span>
+    					</div>
+    					<div class="flip-card-inner-back">
+      						<span class="support-info">
+								Have an interesting idea and want to collaborate? <br>Bring it in!<br>
+							</span>
+    					</div>
+  					</div>
+					</div>	
+				</div>	
+			</div>
+		</div> 
+	</section> -->
