added cool code background, added images for members, and added links for member blurbs

--- a/archive.html
+++ b/archive.html
@@ -57,9 +57,25 @@
       </nav>
       <h1 class="h1 text-center p-3">Archive</h1>
     </div>
+
+  <div class="projects">
+    <div class="orbit">
+      <!--h4>
+        <a href="https://nnhsprogramming.github.io/">Old Club Website</a>
+      </h4> -->
+      <!--img src="imgs/orbit2.jpg" class="center" height="200px">-->
+      <!-- A neat scroller app game to play when class gets boring. We used swift/xcode  and even made the music with garage band. It's now relased in the app store!
+      <img src="imgs/orbit2.jpg" class="center" height="50px" style="float:right"> -->
+    </div>
+
+  </div>
+
+  <br></br>
   <center>
-    <img src="imgs/orbit.jpg" class="center" height="200px">
+    <img src="imgs/orbit2.jpg" class="center" height="200px">
     <img src="imgs/podtalk.png" class="center" height="200px">
+    <img src="imgs/tigerInsider.jpg" class="center" height="200px">
+    <img src="imgs/luaGame.jpg" class="center" height="200px">
     <br></br>
     <figcaption> Welcome to the archives. Here you will find the Programming Clubs past projects.</figcaption>
   </center>
@@ -67,24 +83,33 @@
   <div class="oldProjects p-4">
     <p style="font-family:arial;color:grey">+ 
       <a href="https://nnhsprogramming.github.io/">Old Club Website</a>
+
+      <!--After the pandemic, the club decided it wanted to entirely redo the website (taking ideas from the old website). We completely redid it trying to add the most useful information possible while still making it cool and modern.-->
     </p>
+
 
 
     <p style="font-family:arial;color:grey">
       + 
       <a href="https://apps.apple.com/us/app/orbit-a-space-game/id1353390547">Orbit App</a>
-
+      <!-- A neat scroller app game to play when class gets boring. We used swift/xcode  and even made the music with garage band. It's now relased in the app store! -->
     </p>
 
   
-    <!-- https://apps.apple.com/us/app/orbit-a-space-game/id1353390547 -->
+  
 
     <p style="font-family:arial;color:grey">+  
       <a href="https://apps.apple.com/us/app/north-parking/id1439643706">North Parking Availability App</a>
+      <!-- A poscast app for ios. They also had merch for sale to advertise for the club! Was published on app store and was a huge hit! -->
     </p>
 
     <p style="font-family:arial;color:grey">
       + Podtalk App
+    </p>
+
+    <p style="font-family:arial;color:grey">
+      + 3D OOP Lua game
+      <!-- It's an action combat multiplayer fighting game. We used an object-oriented version of Lua and blender. The physics engine used was roblox studio. We took trigonometry we learned in class and applied it to the game's 3D space. The game is now released on the roblox platform. Over the course of the 9 month development period we hired various gfx artists and 3D modelers online to create art assets. -->
     </p>
 
 
