--- a/fundraising.html
+++ b/fundraising.html
@@ -63,16 +63,25 @@
   </div>
 
   <br></br>
-  <div class="text-center">
-    <h4><u>Sale after school on Friday November 12, meet at tiger drive. See ya there!</u></h4>
+  <div class="previousProjects ">
+    <div class="container">
+         <h4><u>Previous Fundraisers</u></h4>
+    </div>
+
+    <div class="bakeSale2021">
+      
+    <center><p class=" bakeSale">Bake Sale!</p></center>
+
+      <div class="row">
+        <img class="fundraiser_img container col-md-6 col-s-12" src="imgs/flyer2.jpeg" alt="">
+        <img class="fundraiser_img container col-md-6 col-s-12" src="imgs/bakeSaleFlyer.jpg" alt="">
+      </div>
+    </div>
   </div>
-  <img class="fundraiser_img" src="imgs/flyer2.jpeg" alt="">
-  <img class="fundraiser_img"src="imgs/bakeSaleFlyer.jpg" alt="">
- 
   
 
-  <!-- Upcoming fundraise plan -->
-  <!-- link to donate money -->
+ 
+
   
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
