--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!--Favicon Link-->
     <link rel="shortcut icon" type="image/jpg" href="imgs/a.jpg"/>
 
-    <title>Newton North Programming Club</title>
+    <title>NNHS Programming Club</title>
   </head>
   <body>
       
       <nav class="navbar navbar-expand-lg navbar-light bg-light pl-5">
         <a class="navbar-brand p-5 pt-3 pb-3" href="index.html">Newton North Programming Club</a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>    
         </button> 
 
@@ -48,15 +48,18 @@
         </div>
       </nav> 
 
-    <div class = "heading text-center container-fluid bg-light mb-10 pb-5 pt-3 text-dark">
-        <h1 class = "h1, text-center, title" >Newton North Programming Club</h1>
-        <div class= "font-weight-light">
-          <p>Mondays after school 4-5!</p>
-          <p>ROOM 468</p>
-          <p>No experience needed! Drop by anytime!</p>
-        </div>
-        
-        <div class="float-center">
+
+  <header class="header" id="header">
+		<div class="text-box float-center">
+			<h1 class="header-primary align-items-stretch">
+				<img class="logo-img" src="imgs/progclubLogo.png" alt="Club Logo">
+				<span class="header-primary-main">NNHS Programming Club</span>
+        <span class="header-primary-sub">Mondays after school 4-5!</span>
+        <span class="header-primary-sub">ROOM 468</span>
+        <span class="header-primary-sub">No experience needed! Drop by anytime!</span>
+
+        <!--CLUB CONTACT-->
+        <div class="float-center club_contact">
           <a href="https://www.instagram.com/nnhsprogramming/?hl=en">
             <i class="bi bi-instagram fa-2x s_icons"></i>
           </a> 
@@ -66,14 +69,20 @@
           <a href="mailto:betina1620@gmail.com, angela.l.bai@gmail.com, jennifer.yuzhen.li@gmail.com?cc=peloquina@newton.k12.ma.us">
             <i class="bi bi-envelope s_icons"></i>
           </a>
-        </div>    
-        </div>
+        </div> 
+			</h1>
+		</div>
+	</header>
+
+	<div class="behind-header"></div>
+
+
  <div class="paragraph p-4">
    <p> Welcome to the Newton North Programming Club website! The club is a great way to learn how to code, learn new coding stradegies, and make friends! We do lots of cool projects but most importantly, the club serves as a safe community for people to share ideas and collaborate with each other. At the Newton North Programming club we strive for excellence. Every Monday we push our knowledge further and further. We are pushing the limits of the human species and going farther than we ever have before. We hope to see you there! 
    </p> 
  </div>
  
-  <div class="container-fluid p-3">
+  <div class="gallery container-fluid">
     <div class="row">
       <div class="column container">
         <img src="imgs/stepUpDay.jpg" alt="">
@@ -101,72 +110,3 @@
 </html>
 
 
-
-<!-- section class="about" id="about">
-		
-		<div class="cards container-fluid">
-			<div class="row">
-
-				<div class="col-lg-3 col-md-6">
-					<div class="flip-card card" ontouchstart="this.classList.toggle('hover');">
-  					<div class="flip-card-inner">
-    					<div class="flip-card-inner-front flip-card-front-join">
-      						<span id="specificjoin">Join</span>
-    					</div>
-    					<div class="flip-card-inner-back">
-      						<span class="join-info">
-							We welcome everyone to join and collaborate with us. <br> No experience necessary.
-							</span>
-    					</div>
-  					</div>
-					</div>
-				</div>
-
-				<div class="col-lg-3 col-md-6">
-					<div class="flip-card card" ontouchstart="this.classList.toggle('hover');">
-  					<div class="flip-card-inner">
-    					<div class="flip-card-inner-front flip-card-front-location">
-      						<span id="specificlocation">Location</span>
-    					</div>
-    					<div class="flip-card-inner-back">
-      						<span class="flip-card-back-dispay-block">Room 217</span>
-							<span class="flip-card-back-dispay-block">Thursday X-blocks</span>
-    					</div>
-  					</div>
-					</div>
-				</div>
-
-				<div class="col-lg-3 col-md-6">
-					<div class="flip-card card" ontouchstart="this.classList.toggle('hover');">
-  					<div class="flip-card-inner">
-    					<div class="flip-card-inner-front flip-card-front-project">
-      						<span id="specificproject">Project Types</span>
-    					</div>
-    					<div class="flip-card-inner-back">
-      						<span class="flip-card-back-dispay-block">iPhone apps</span>
-							<span class="flip-card-back-dispay-block">Web Development</span>
-							<span class="flip-card-back-dispay-block">Game Design</span>
-							<span class="flip-card-back-dispay-block">3D modeling</span>
-							<span class="flip-card-back-dispay-block">Bring your own ideas to the club!</span>
-    					</div>
-  					</div>
-					</div>
-				</div>
-
-				<div class="col-lg-3 col-md-6">
-					<div class="flip-card card" ontouchstart="this.classList.toggle('hover');">
-  					<div class="flip-card-inner">
-    					<div class="flip-card-inner-front flip-card-front-support">
-      						<span id="specificsupport">Create</span>
-    					</div>
-    					<div class="flip-card-inner-back">
-      						<span class="support-info">
-								Have an interesting idea and want to collaborate? <br>Bring it in!<br>
-							</span>
-    					</div>
-  					</div>
-					</div>	
-				</div>	
-			</div>
-		</div> 
-	</section> -->
