--- a/about_us.html
+++ b/about_us.html
@@ -13,8 +13,8 @@
   <!--Bootstrap icons-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
-    <!-- Favicon Link -->
-    <link rel="shortcut icon" type="image/jpg" href="imgs/a.jpg"/>
+  <!-- Favicon Link -->
+  <link rel="shortcut icon" type="image/jpg" href="imgs/a.jpg"/>
 
 </head>
 <body>
@@ -47,14 +47,13 @@
       </ul>
     </div>
   </nav>
-
   <!--Begin content-->
 
   <div class="c_heading">
     <h1 class="h1 text-center p-3">Meet the Team!</h1>
   </div>
 
-  <div class = "contact_info text-center row pt-5">
+  <div class = "contact_info text-center row pt-5 m-0">
 
   <!--Club Officer Template-->
 
@@ -203,17 +202,44 @@
   </div>
       
   <!-- Modal Member Template -->
-  <div id="ShowMember" class="modal">
-    <div class="modal-content m_modal">  
+  <!-- <div id="ShowMember" class="modal">
+    <div class="modal-content row"> 
+      <img 
+          id="ShowMember_ID"
+          class = "headshot modal_headshot img-fluid image  col-md-6"  
+          src="#" 
+          alt="#">
       <div class="m_close">
         <span id="CloseMember" class="close">&times;</span>
       </div>
-      <div class="member_text">
+      <div class="member_text officer_text col-md-6">
         <h1 id="ShowMember_Name" class="m_name flex-1">Name</h1>
         <p id="ShowMember_Text" class= "float-right">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, delectus quod. Quae, placeat nostrum officiis quaerat molestias quidem asperiores nihil! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla cumque eligendi veritatis, placeat autem, accusantium in molestiae assumenda, nemo ab qui nesciunt. Ipsum, libero aspernatur. Laborum nam odio fuga suscipit quia ab velit, corrupti quaerat architecto dolore obcaecati doloremque eaque?
         </p>    
       </div> 
+    </div>
+  </div> -->
+    <div id="ShowMember" class="modal">
+    <div class="modal-content">  
+      <div>
+        <img 
+          id="ShowMember_ID"
+          class = "headshot member_headshot img-fluid image" 
+          src="#" 
+          alt="#">
+        <div>
+          <div>
+            <span id="CloseMember" class="close">&times;</span>
+          </div>
+          <div class="member_text">
+            <h1 class="h1 modal_name"id="ShowMember_Name">Name</h1>
+            <p class="o_text" id="ShowMember_Text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, delectus quod. Quae, placeat nostrum officiis quaerat molestias quidem asperiores nihil! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla cumque eligendi veritatis, placeat autem, accusantium in molestiae assumenda, nemo ab qui nesciunt. Ipsum, libero aspernatur. Laborum nam odio fuga suscipit quia ab velit, corrupti quaerat architecto dolore obcaecati doloremque eaque?
+            </p>
+          </div>
+        </div>
+      </div>    
     </div>
   </div>
 
@@ -241,7 +267,7 @@
     <button id="btn19" type="button" class="btn btn-outline-secondary" onclick="showMember(19)">Name</button>
     <button id="btn20" type="button" class="btn btn-outline-secondary" onclick="showMember(20)">Name</button>
     <button id="btn21" type="button" class="btn btn-outline-secondary" onclick="showMember(21)">Isabelle Sloan</button>
-    <button id="btn22" type="button" class="btn btn-outline-secondary" onclick="showMember(22)">Noah Finkelstein</button>
+    <!-- <button id="btn22" type="button" class="btn btn-outline-secondary" onclick="showMember(22)">Noah Finkelstein</button> -->
 
   </div>  
 
