--- a/resources.html
+++ b/resources.html
@@ -16,7 +16,7 @@
 <body>
     <div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light pl-5">
-        <a class="navbar-brand p-5 pt-3 pb-3" href="index.html">Newton North Programming Club</a>
+        <a class="navbar-brand pt-3 pb-3" href="index.html">Newton North Programming Club</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
