fixed margin/sizing in main page, redid archive page (added blurbs and more images)

--- a/archive.html
+++ b/archive.html
@@ -57,70 +57,67 @@
       </nav>
       <h1 class="h1 text-center p-3">Archive</h1>
     </div>
+  <div class="pb-3">
+    <figcaption> Welcome to the archives. Here you will find the Programming Clubs past projects.</figcaption>
+  </div>
+  
 
   <div class="projects">
-    <div class="orbit">
-      <!--h4>
-        <a href="https://nnhsprogramming.github.io/">Old Club Website</a>
-      </h4> -->
-      <!--img src="imgs/orbit2.jpg" class="center" height="200px">-->
-      <!-- A neat scroller app game to play when class gets boring. We used swift/xcode  and even made the music with garage band. It's now relased in the app store!
-      <img src="imgs/orbit2.jpg" class="center" height="50px" style="float:right"> -->
+    <div class="orbit pb-3">
+      <div class="project-header">
+        <a href="https://apps.apple.com/us/app/orbit-a-space-game/id1353390547">Orbit App</a>
+      </div>
+      <img src="imgs/orbit2.jpg" class="project-img" style="">
+      A neat scroller app game to play when class gets boring. We used swift/xcode and even made the music with garage band. It's now relased in the app store!
+
     </div>
 
+    <div class="parking pb-3">
+      <div class="project-header">
+        <a href="https://apps.apple.com/us/app/north-parking/id1439643706">North Parking Availability App</a>
+      </div>
+      <img src="imgs/northParking.jpg" class="project-img" style="">
+      The Newton North Parking Availability App is a great way for students to find parking around the school. Most kids with their license are aware of the chaos and disorder there is around North when trying to find parking. The app is a great way to locate parking easily and quickly.
+    </div>
+
+    <div class="oldWebsite pb-3">
+      <div class="project-header">
+        <a href="https://nnhsprogramming.github.io/">Old Club Website</a>
+      </div>
+      After the pandemic, the club decided it wanted to entirely redo the website (taking ideas from the old website). We completely redid it trying to add the most useful information possible while still making it cool and modern.
+    </div>
+
+    <div class="podtalk pb-3">
+      <div class="project-header">
+        Podtalk App
+      </div>
+      <img src="imgs/podtalk.png" class="project-img" style="">
+      A poscast app for ios. They also had merch for sale to advertise for the club! Was published on app store and was a huge hit!
+    </div>
+
+    <div class="luaGame pb-3">
+      <div class="project-header">
+        3D OOP Lua game
+      </div>
+      <img src="imgs/luaGame.jpg" class="project-img" style="">
+      It's an action combat multiplayer fighting game. We used an object-oriented version of Lua and blender. The physics engine used was roblox studio. We took trigonometry we learned in class and applied it to the game's 3D space. The game is now released on the roblox platform. Over the course of the 9 month development period we hired various gfx artists and 3D modelers online to create art assets.
+    </div>
+
+    <div class="tigerInsider pb-3">
+      <div class="project-header">
+        Website for TigerInsider
+      </div>
+      <img src="imgs/tigerInsider.jpg" class="project-img" style="">
+      The Tiger Insider website uses the bootstrap CSS framework and silverstripe PHP for the backend. The club created some graphics to slap on the website and hired a gfx artist online to create an article placeholder banner. We like to use our own code, so bootstrap CSS was the optimal way in efficiency and creativity.
+    </div>
+
+    <div class="dreamherSite pb-3">
+      <div class="project-header">
+        Dreamher Charity Website
+      </div>
+      The website made for Dreamher Charity was also created with bootstrap to create a better user-interface. This site was created for an organization. We hope to continue helping out charities near us by creating websites and games.
+    </div>
   </div>
 
-  <br></br>
-  <center>
-    <img src="imgs/orbit2.jpg" class="center" height="200px">
-    <img src="imgs/podtalk.png" class="center" height="200px">
-    <img src="imgs/tigerInsider.jpg" class="center" height="200px">
-    <img src="imgs/luaGame.jpg" class="center" height="200px">
-    <br></br>
-    <figcaption> Welcome to the archives. Here you will find the Programming Clubs past projects.</figcaption>
-  </center>
-
-  <div class="oldProjects p-4">
-    <p style="font-family:arial;color:grey">+ 
-      <a href="https://nnhsprogramming.github.io/">Old Club Website</a>
-
-      <!--After the pandemic, the club decided it wanted to entirely redo the website (taking ideas from the old website). We completely redid it trying to add the most useful information possible while still making it cool and modern.-->
-    </p>
-
-
-
-    <p style="font-family:arial;color:grey">
-      + 
-      <a href="https://apps.apple.com/us/app/orbit-a-space-game/id1353390547">Orbit App</a>
-      <!-- A neat scroller app game to play when class gets boring. We used swift/xcode  and even made the music with garage band. It's now relased in the app store! -->
-    </p>
-
-  
-  
-
-    <p style="font-family:arial;color:grey">+  
-      <a href="https://apps.apple.com/us/app/north-parking/id1439643706">North Parking Availability App</a>
-      <!-- A poscast app for ios. They also had merch for sale to advertise for the club! Was published on app store and was a huge hit! -->
-    </p>
-
-    <p style="font-family:arial;color:grey">
-      + Podtalk App
-    </p>
-
-    <p style="font-family:arial;color:grey">
-      + 3D OOP Lua game
-      <!-- It's an action combat multiplayer fighting game. We used an object-oriented version of Lua and blender. The physics engine used was roblox studio. We took trigonometry we learned in class and applied it to the game's 3D space. The game is now released on the roblox platform. Over the course of the 9 month development period we hired various gfx artists and 3D modelers online to create art assets. -->
-    </p>
-
-
-
-    <p style="font-family:arial;color:grey">+ Website for TigerInsider</p>
-
-    <p style="font-family:arial;color:grey">+ Dreamher Charity Website</p>
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
