--- a/resources.html
+++ b/resources.html
@@ -74,8 +74,14 @@
     </div>
     <br>
     <div>
-      <button type="button" class="b_color btn btn-secondary" style="color: grey"  onclick="document.location='https://www.w3schools.com/html/default.asp'">HTML Courses</button>
-      <button type="button" class="b_color btn btn-secondary" style="color: grey"  onclick="document.location="document.location='https://projecteuler.com/archives'">Euler Problems</button>
+      <button 
+        type="button" 
+        class="b_color btn btn-secondary" 
+        style="color: grey"  onclick="document.location='https://www.w3schools.com/html/default.asp'">HTML Courses</button>
+      <button 
+        type="button" 
+        class="b_color btn btn-secondary" 
+        style="color: grey"  onclick="document.location='https://projecteuler.net/archives'">Euler Problems</button>
       <button type="button" class="b_color btn btn-secondary" style="color: grey" onclick="document.location='https://codewars.com/dashboard'">CodeWars</button>
       <button type="button" class="b_color btn btn-secondary mt-1 mb-1" style="color: grey" onclick="document.location='https://discord.gg/dZ4RVNRQEm/'">Discord</button>
     </div>
