--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
 
 
  <div class="paragraph p-4">
-   <p> Welcome to the Newton North Programming Club website! The club is a great way to learn how to code, learn new coding stradegies, and make friends! We do lots of cool projects but most importantly, the club serves as a safe community for people to share ideas and collaborate with each other. At the Newton North Programming club we strive for excellence. Every Monday we push our knowledge further and further. We are pushing the limits of the human species and going farther than we ever have before. We hope to see you there! 
-   </p> 
+   <p>  Welcome to the Newton North Programming Club website! The club is a great way to learn how to code, develop new coding stradegies, and make friends! We do lots of cool projects but most importantly, the club serves as a place for people to share ideas and collaborate with each other. We can also help you with any homework you have for you CS classes. We hope to see you there!</p> 
  </div>
  
   <div class="gallery container-fluid">
@@ -98,6 +97,8 @@
         <img src="imgs/zoom.jpg" alt="">
         <img src="imgs/poster.jpg" alt="">
         <img class = "border" src="imgs/tiger.png" alt="">
+        <img class = "border" src="imgs/fontClub.png" alt="">
+
       </div>
     </div>
   </div>
