added logos, added 2048 python to archive, and changed betina despription/blurb

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         </div>
       </nav> 
 
-
+      <!-- a href="test.html">test.html</a> -->
+ 
   <header class="header" id="header">
 		<div class="text-box float-center">
 			<h1 class="header-primary align-items-stretch">
@@ -78,7 +79,7 @@
 
 
  <div class="paragraph p-4">
-   <p>  Welcome to the Newton North Programming Club website! The club is a great way to learn how to code, develop new coding stradegies, and make friends! We do lots of cool projects but most importantly, the club serves as a place for people to share ideas and collaborate with each other. We can also help you with any homework you have for you CS classes. We hope to see you there!</p> 
+   <p>  Welcome to the Newton North Programming Club website! The club is a great way to learn how to code, develop new coding stradegies, and make friends! We do lots of cool projects but most importantly, the club serves as a place for people to share ideas and collaborate with each other. We can also help you with any homework you have for your CS classes. We hope to see you there!</p> 
  </div>
  
   <div class="gallery container-fluid">
@@ -92,12 +93,14 @@
         <img class = "border"src="imgs/computerLogo.jpg" alt="">
         <img src="imgs/tigerLogo.jpg" alt="">
         <img src="imgs/newspaper.jpg" alt="">
+        <img src="imgs/computer2.jpg" alt="">
       </div>
       <div class="column container">
         <img src="imgs/zoom.jpg" alt="">
         <img src="imgs/poster.jpg" alt="">
         <img class = "border" src="imgs/tiger.png" alt="">
         <img class = "border" src="imgs/fontClub.png" alt="">
+        <img class = "border" src="imgs/logosamples.png" alt="">
 
       </div>
     </div>
