--- a/test.html
+++ b/test.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Archive</title>
+  <title>TEST</title>
 
   <!-- boostrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="archive.css">
+    <link rel="stylesheet" href="test.css">
 
     <!-- Favicon Link -->
     <link rel="shortcut icon" type="image/jpg" href="imgs/a.jpg"/>
@@ -52,6 +52,7 @@
       <figcaption class="welcome"> Welcome to the archives. Here you will find the Programming Clubs past projects.</figcaption>
     </div>
 
+
     <div class="orbit pb-3">
       <div class="project-header">
         <a href="https://apps.apple.com/us/app/orbit-a-space-game/id1353390547">Orbit App</a>
@@ -66,16 +67,8 @@
       <div class="project-header">
         <a href="https://apps.apple.com/us/app/north-parking/id1439643706">North Parking Availability App</a>
       </div>
-      <img src="imgs/northParking.jpg" class="project-img" style="">
+      <img src="imgs/northParking.jpg" class="project-img north_parking" style="">
       The Newton North Parking Availability App is a great way for students to find parking around the school. Most kids with their license are aware of the chaos and disorder there is around North when trying to find parking. The app is a great way to locate parking easily and quickly.
-    </div>
-
-    <div class="2048 pb-3">
-      <div class="project-header">
-        2048 Python
-      </div>
-      <img src="imgs/2048.jpg" class="project-img" style="">
-      One of our club members was inspired by the classic 2048 game that so many people play during class. They recreated the game using python and user input. It's a fun and entertaining way to spend class and is really cool because he made it himself. Demo of game coming soon!
     </div>
 
     <div class="oldWebsite pb-3">
@@ -117,9 +110,14 @@
     </div>
   </div>
 
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
+  <!--gsap thing-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+  <script src="test.js"></script>
 
 </body>
 </html>
