redid resources page and added animations, added eva to about us

--- a/about_us.html
+++ b/about_us.html
@@ -266,8 +266,8 @@
     <button id="btn18" type="button" class="btn btn-outline-secondary" onclick="showMember(18)">Name</button>
     <button id="btn19" type="button" class="btn btn-outline-secondary" onclick="showMember(19)">Name</button>
     <button id="btn20" type="button" class="btn btn-outline-secondary" onclick="showMember(20)">Name</button>
-    <button id="btn21" type="button" class="btn btn-outline-secondary" onclick="showMember(21)">Isabelle Sloan</button>
-    <!-- <button id="btn22" type="button" class="btn btn-outline-secondary" onclick="showMember(22)">Noah Finkelstein</button> -->
+    <button id="btn21" type="button" class="btn btn-outline-secondary" onclick="showMember(21)">Name</button>
+    <button id="btn22" type="button" class="btn btn-outline-secondary" onclick="showMember(22)">Name</button>
 
   </div>  
 
