--- a/archive.html
+++ b/archive.html
@@ -70,6 +70,14 @@
       The Newton North Parking Availability App is a great way for students to find parking around the school. Most kids with their license are aware of the chaos and disorder there is around North when trying to find parking. The app is a great way to locate parking easily and quickly.
     </div>
 
+    <div class="frenchsite pb-3">
+      <div class="project-header">
+        French Club Website
+      </div>
+      <img src="imgs/french.jpg" class="project-img" style="">
+      The French Club is another club at North that the Programming Club made a site for! We used Bootstrap and brilliant thinking to artistically craft a pleasing and visually appealing site that greatly benefits the French Club. Au revoir!
+    </div>
+
     <div class="2048 pb-3">
       <div class="project-header">
         2048 Python
