--- a/faq.html
+++ b/faq.html
@@ -74,10 +74,17 @@
       <h5>What happens if I already know how to code?</h5>
       <p>That’s great! We would love to have you in the club, we will work on lots of different projects and you can help us to work on the harder parts. This can also be a space to work on your personal projects and talk them through with others.</p>
 
+      <h5>Want to join!</h5>
+      <p>We'll add you to the email
+        <a href="https://forms.gle/x7uEkrhn8R2xDUuDA">list.</a>
+      </p>
+
       <h5>Have questions?</h5>
       <p>Fill out this
         <a href="https://forms.gle/jRcw1pPJTrKuNsTu7">form.</a>
       </p>
+
+      
         
 
     </div>
