--- a/fundraising.html
+++ b/fundraising.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fundraising</title>
 
-  <!-- boostrap link  -->
+    <!-- bootstrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="fundraising.css" rel="stylesheet" type="text/css" />
 
@@ -14,55 +14,44 @@
 
 </head>
 <body>
-    <div>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light pl-5">
-        <a class="navbar-brand p-5 pt-3 pb-3" href="index.html">Newton North Programming Club</a>
+  <div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light pl-5">
+      <a class="navbar-brand p-5 pt-3 pb-3" href="index.html">Newton North Programming Club</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="resources.html"> Resources </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="archive.html"> Archive </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="faq.html"> FAQ </a>
+          </li>
+          <li class="nav-item text-dark">
+            <a class="nav-link text-dark" href="fundraising.html"> Fundraising </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about_us.html"> About Us </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="resources.html"> Resources </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="archive.html"> Archive </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="faq.html"> FAQ </a>
-            </li>
-            <li class="nav-item text-dark">
-              <a class="nav-link text-dark" href="fundraising.html"> Fundraising </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about_us.html"> About Us </a>
-            </li>
-            <!--
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-          -->
-          </ul>
-        </div>
-      </nav>
-      <h1 class="h1 text-center p-3">Fundraising</h1>
-    </div>
+    <h1 class="h1 text-center p-3">Fundraising</h1>
+
+  </div>
   <div class="WhyFundraising p-4">
     <h5 class="text-center">Why fundraising?</h5>
     <p class="text-center">The club needs money to buy a domain for this website, donate to charities, get new equipment for projects, perchase domains for other websites, snacks, and club merch. Any donation is greatly appreciated!</p>
   </div>
 
   <br></br>
+  
   <div class="previousProjects ">
     <div class="container">
          <h4><u>Previous Fundraisers</u></h4>
@@ -83,7 +72,7 @@
  
 
   
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
