--- a/test.html
+++ b/test.html
@@ -71,6 +71,22 @@
       The Newton North Parking Availability App is a great way for students to find parking around the school. Most kids with their license are aware of the chaos and disorder there is around North when trying to find parking. The app is a great way to locate parking easily and quickly.
     </div>
 
+    <div class="frenchsite pb-3">
+      <div class="project-header">
+        French Club Website
+      </div>
+      <img src="imgs/french.jpg" class="project-img" style="">
+      The French Club is another club at North that the Programming Club made a site for! We used Bootstrap and brilliant thinking to artistically craft a pleasing and visually appealing site that greatly benefits the French Club. Au revoir!
+    </div>
+
+    <div class="game pb-3">
+      <div class="project-header">
+        2048 Python
+      </div>
+      <img src="imgs/2048.jpg" class="project-img" style="">
+      One of our club members was inspired by the classic 2048 game that so many people play during class. They recreated the game using python and user input. It's a fun and entertaining way to spend class and is really cool because he made it himself. Demo of game coming soon!
+    </div>
+
     <div class="oldWebsite pb-3">
       <div class="project-header">
         <a href="https://nnhsprogramming.github.io/">Old Club Website</a>
