added link to french club website

--- a/archive.html
+++ b/archive.html
@@ -72,7 +72,7 @@
 
     <div class="frenchsite pb-3">
       <div class="project-header">
-        French Club Website
+        <a href="https://nnhsfrenchclub.com/">French Club Website</a>
       </div>
       <img src="imgs/french.jpg" class="project-img" style="">
       The French Club is another club at North that the Programming Club made a site for! We used Bootstrap and brilliant thinking to artistically craft a pleasing and visually appealing site that greatly benefits the French Club. Au revoir!
